Overflow x problem solved

--- a/src/components/LandingPage/styles.css
+++ b/src/components/LandingPage/styles.css
@@ -1,5 +1,5 @@
 .full{
-    width: 100vw;
+    width: 100%;
     overflow-x: hidden;
 }
 
@@ -7,7 +7,7 @@
     display: flex;
     background-color: #071629;
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
