--- a/src/components/Opening/styles.css
+++ b/src/components/Opening/styles.css
@@ -1,6 +1,6 @@
 .open-container {
     height: 100vh;
-    width: 100vw;
+    width: 100%;
     background-color: #0a1e38;
     position: relative;
     overflow: hidden;
