--- a/src/components/Stars/styles.css
+++ b/src/components/Stars/styles.css
@@ -1,6 +1,6 @@
 .star-container {
     position: absolute;
-    width: 90vw;
+    width: 90%;
     height: 90vh;
     overflow: hidden;
     /* background-color: black; */
